<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Generic strings -->
    <string name="action_settings">Settings</string>
    <string name="setup_network">Setup Network</string>
    <string name="polls">Polls</string>
    <string name="poll_archive">Poll Archive</string>
    <string name="network_password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="network_wlan_key">WLAN Key</string>
    <string name="poll_setup">Poll Setup</string>
    <string name="add">Add</string>
    <string name="available_polls">Available Polls</string>
    <string name="create">Create</string>
    <string name="delete_option">Delete Option</string>
    <string name="content">Content</string>
    <string name="allow_empty_vote">Allow empty votes</string> 
    <string name="networks">Networks</string>
    <string name="identification">Your identification</string>
    

    <!-- Action bar titles -->
    <string name="action_create_poll">Create new poll</string>
    <string name="action_save">Save</string>
    <string name="action_start_poll">Start poll</string>
    <string name="action_next">Next</string>
    <string name="action_back">Back</string>
    <string name="action_stop_poll">Finish poll</string>
    <string name="action_rescan_wifi">Rescan Wifi Networks</string>
    <string name="action_start_poll_period">Start Poll Period</string>

    <!-- Toasts -->
    <string name="toast_poll_saved">Poll has been saved.</string>
    <string name="toast_poll_updated">Poll has been updated.</string>
    <string name="toast_question_empty">Question cannot be empty.</string>
    <string name="toast_not_enough_options">There must be at least two options.</string>
    <string name="toast_option_empty">Options cannot be empty.</string>
    <string name="toast_not_enough_participant_selected">Please select at least two participants.</string>
    <string name="toast_no_network_set_up">No network has been set up. Please first set one up. You have to return to the main screen.</string>
    <string name="toast_not_everybody_accepted">Not every body has accepted the vote. Wait or exclude the concerned people from the electorate.</string>
    <string name="dialog_title_save_poll">Save the poll?</string>
    <string name="dialog_save_poll">Do you want to save the modifications you have done on this poll?</string>
    <string name="dialog_title_stop_poll">Finish the poll?</string>
    <string name="dialog_stop_poll">Some participants have not voted yet. Do you really want to finish the voting phase?</string>
    <string name="dialog_title_add_option">Add option in edition?</string>
    <string name="dialog_add_option">You still have an option in edition. Do you want to add it to the poll?</string>
    
    
    <!-- Activity titles -->
    <string name="app_name_admin_app">InstaVote Administrator</string>
    <string name="title_activity_poll">Poll Administration</string>
    <string name="title_activity_network_config">Network Configuration</string>
    <string name="title_activity_poll_detail">Poll Detail</string>
    <string name="title_activity_electorate">Choose electorate</string>
    <string name="title_activity_review_poll">Poll review</string>
    <string name="title_activity_wait_for_votes_admin">Waiting...</string>

    <!-- Activity subtitles -->
    <string name="title_activity_welcome">Welcome to the InstaVote Administrator!</string>
    <string name="title_activity_choosenetwork">Please Choose the Network you want to use</string>
    <string name="title_activity_chooseelectorate">Please choose the electorate</string>
    <string name="title_activity_reviewpoll">Please review the poll</string>
    <string name="wait_votes_admin">Thanks for voting!\nWaiting for votes...</string>

    <!-- Hints in EditText fields -->
    <string name="hint_enter_question">Enter the question of the poll here</string>
    <string name="hint_enter_option">Enter the Option here</string>

    <!-- Help dialog titles -->
    <string name="help_title_main">Help for home screen</string>
    <string name="help_title_network_config">Help for network configuration</string>
    <string name="help_title_poll">Help for poll creation</string>
    <string name="help_title_poll_details">Help for poll details</string>
    <string name="help_title_electorate">Help for electorate selection</string>
    <string name="help_title_review">Help for poll review</string>
    <string name="help_title_wait">Help for poll state</string>
    
    <!-- Help dialog texts -->
    <string name="help_text_main">The home screen allows you to... and so on. The home screen allows you to... and so on. The home screen allows you to... and so on. The home screen allows you to... and so on. The home screen allows you to... and so on.The home screen allows you to... and so on.The home screen allows you to... and so on.The home screen allows you to... and so on.The home screen allows you to... and so on.The home screen allows you to... and so on.The home screen allows you to... and so on.The home screen allows you to... and so on.The home screen allows you to... and so on.The home screen allows you to... and so on.The home screen allows you to... and so on.The home screen allows you to... and so on.The home screen allows you to... and so on.The home screen allows you to... and so on.The home screen allows you to... and so on.The home screen allows you to... and so on.</string>
	<string name="help_text_network_config">network configuration</string>
    <string name="help_text_poll">poll creation</string>
    <string name="help_text_poll_details">poll details</string>
    <string name="help_text_electorate">electorate selection</string>
    <string name="help_text_review">poll review</string>
    <string name="help_text_wait">poll state</string>
</resources>