<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/textview_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:minHeight="100dp"
        android:text="@string/poll_setup"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/edittext_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_enter_question"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <ListView
        android:id="@+id/listview_pollquestions"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

    </ListView>

    <LinearLayout
        android:id="@+id/footer"
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edittext_option"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/hint_enter_option"
            android:inputType="text" />

	    <ImageButton
	        android:id="@+id/button_addoption"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="32dp"
	        android:layout_height="32dp"
	        android:layout_margin="8dp"
	        android:contentDescription="@string/description_add_option"
	        android:src="@android:drawable/ic_menu_add"
	        android:text="@string/add" />

	</LinearLayout>

</LinearLayout>
